--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 
 [features]
 default = []
+dev = []
 
 [build-dependencies]
 clap = { version = "4.1.7", features = ["derive"] }
