refactor: Merge proxy-ctrl into main project (#182)
* refactor: Merge proxy-ctrl into main project

* refactor: remove submodule

* refactor: added proxy controller

* refactor: tests workflow

* test: refactor workflow for proxy-ctrl

* test: refactor workflow for proxy-ctrl

* test: refactor workflow for proxy-ctrl

* refactor: tests workflow

* refactor: tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,11 +46,16 @@ jobs:
         docker pull cockroachdb/cockroach:v22.2.6
         docker pull nexthat/metrsd:v0.1.0
         docker pull nexthat/nanocl-get-started:latest
+        docker pull nexthat/nanocl-proxy:0.2.3
+        docker pull nexthat/nanocl-ctrl-proxy:0.2.3
+        cargo build --bin nanocl
+        cp ./target/debug/nanocl /usr/local/bin
         cargo make run-daemon -- --init
         docker network ls
         cargo make run-daemon &
         sleep 5
         sudo chmod 777 -R /run/nanocl
+        sudo chmod 777 -R /var/lib/nanocl
     # Run coverage
     - name: Run tests
       run: cargo make covgen
