--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,6 +56,7 @@ jobs:
         sleep 5
         sudo chmod 777 -R /run/nanocl
         sudo chmod 777 -R /var/lib/nanocl
+        mkdir -p /tmp/nginx/sites-enabled
     # Run coverage
     - name: Run tests
       run: cargo make covgen
