--- a/bin/proxy-ctrl/Dockerfile
+++ b/bin/proxy-ctrl/Dockerfile
@@ -4,34 +4,37 @@ FROM rust:1.68.0-alpine3.17 as planner
 WORKDIR /app
 RUN apk add gcc g++ make
 RUN cargo install cargo-chef --locked
-COPY ./Cargo.toml ./Cargo.lock ./
-ENV RUSTFLAGS="-C target-feature=+crt-static"
-RUN cargo chef prepare --recipe-path recipe.json
+COPY ./Cargo.toml ./Cargo.toml
+COPY ./Cargo.lock ./Cargo.lock
+COPY ./crates/nanocl_stubs/Cargo.toml ./crates/nanocl_stubs/Cargo.toml
+COPY ./crates/nanocld_client/Cargo.toml ./crates/nanocld_client/Cargo.toml
+COPY ./bin/nanocl/Cargo.toml ./bin/nanocl/Cargo.toml
+COPY ./bin/nanocld/Cargo.toml ./bin/nanocld/Cargo.toml
+COPY ./bin/proxy-ctrl/Cargo.toml ./bin/proxy-ctrl/Cargo.toml
 
-# state 2 - build our dependencies
-FROM rust:1.68.0-alpine3.17 as cacher
-
-WORKDIR /app
-COPY --from=planner /usr/local/cargo/bin/cargo-chef /usr/local/cargo/bin/cargo-chef
-COPY --from=planner /app .
-RUN apk update && apk upgrade
-RUN apk add gcc g++ make musl-dev
-ENV RUSTFLAGS="-C target-feature=+crt-static"
-RUN cargo chef cook --release --target=x86_64-unknown-linux-musl --recipe-path recipe.json
-
-# stage 3 - build our project
+# stage 2 - Build our project
 FROM rust:1.68.0-alpine3.17 as builder
 
+ARG channel=stable
+
+## Build our nanocl daemon binary
+COPY --from=planner /app /app
 WORKDIR /app
-COPY --from=cacher /usr/local/cargo /usr/local/cargo
-COPY --from=cacher /app .
-RUN apk update && apk upgrade
-RUN apk add gcc g++ make upx musl-dev
-COPY ./src ./src
+RUN apk add musl-dev libpq-dev openssl git upx
+COPY ./bin/nanocld/migrations ./bin/nanocld/migrations
+COPY ./bin/nanocld/src ./bin/nanocld/src
+COPY ./bin/nanocld/build.rs ./bin/nanocld/build.rs
+COPY ./crates/nanocl_stubs/src ./crates/nanocl_stubs/src
+COPY ./crates/nanocld_client/src ./crates/nanocld_client/src
+COPY ./bin/nanocl/src ./bin/nanocl/src
+COPY ./bin/nanocl/build.rs ./bin/nanocl/build.rs
+COPY .git ./.git
+COPY ./bin/proxy-ctrl/src ./bin/proxy-ctrl/src
+COPY ./bin/proxy-ctrl/build.rs ./bin/proxy-ctrl/build.rs
+COPY ./bin/proxy-ctrl/specs ./bin/proxy-ctrl/specs
 ENV RUSTFLAGS="-C target-feature=+crt-static"
-RUN cargo build --release --target=x86_64-unknown-linux-musl
-RUN upx /app/target/x86_64-unknown-linux-musl/release/proxy-ctrl
-RUN chmod +x /app/target/x86_64-unknown-linux-musl/release/proxy-ctrl
+RUN cargo build --release --target=x86_64-unknown-linux-musl --bin proxy-ctrl
+RUN upx --lzma --best /app/target/x86_64-unknown-linux-musl/release/proxy-ctrl
 
 # stage 4 - create runtime image
 FROM scratch
