--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -26,7 +26,7 @@ Resources:
               Port: 9000
 
 Cargoes:
-- Name: deploy-args-example
+- Name: get-started
   # See all options:
   # https://docs.docker.com/engine/api/v1.42/#tag/Container/operation/ContainerCreate
   Container:
