--- a/examples/resource_ssl_example.yml
+++ b/examples/resource_ssl_example.yml
@@ -7,10 +7,10 @@ Resources:
   Version: v0.1
   Config:
     Watch:
-      - get-started.global
+      - deploy-example.global
     Rule:
       Http:
-        Domain: get-started.com
+        Domain: deploy-example.com
         Network: Public
         Ssl:
           Certificate: /random/path/to/cert
@@ -20,5 +20,5 @@ Resources:
           - Path: /
             Target:
               Cargo:
-                Key: get-started.global
+                Key: deploy-example.global
                 Port: 9000
