bugfix: test workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,10 +50,12 @@ jobs:
         docker pull nexthat/nanocl-ctrl-proxy:0.2.3
         docker build -t nanocl-proxy:test -f ./bin/proxy-ctrl/Dockerfile .
         cargo build --bin nanocl
+        cargo build --bin proxy-ctrl
         cp ./target/debug/nanocl /usr/local/bin
         cargo make run-daemon -- --init
         docker network ls
         cargo make run-daemon &
+        cargo run --bin proxy-ctrl --conf-dir /var/lib/nanocl/proxy &
         sleep 8
         sudo chmod 777 -R /run/nanocl
         sudo chmod 777 -R /var/lib/nanocl
