refactor(proxy-ctrl): apply and remove rule (#183)
* refactor(proxy-ctrl): First route

* feature(proxy-ctrl): apply and remove rule

* feature: proxy controller with nanocld webhook

* refactor: Makefile.toml to support test feature

* refactor(proxy-ctrl): Removed cargo-chef

* refactor: test workflow

* bugfix: test workflow

* refactor: remove lcov.info

* bugfix: test workflow

* bugfix: test workflow

* bugfix: test workflow

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -34,26 +34,30 @@ args = ["nextest", "run", "-p", "nanocl"]
 # Test all
 [tasks.test]
 command = "cargo"
-args = ["nextest", "run", "-j", "1"]
+args = ["nextest", "run", "--no-default-features", "--features", "test", "-j", "1"]
 
 # Test all with debug output
 [tasks.test-debug]
 command = "cargo"
-args = ["nextest", "run", "-j", "1", "--nocapture"]
+args = ["nextest", "run", "--no-default-features", "--features", "test", "-j", "1", "--nocapture"]
 
 [tasks.dev]
 command = "cargo"
 args = ["run", "--features", "dev", "--bin", "nanocld", "${@}"]
 
+[tasks.dev-proxy]
+command = "cargo"
+args = ["run", "--features", "dev", "--bin", "proxy-ctrl", "${@}"]
+
 # Test coverage
 [tasks.cov]
 command = "cargo"
-args = ["llvm-cov", "nextest", "-j", "1"]
+args = ["llvm-cov", "nextest", "--no-default-features", "--features", "test", "-j", "1"]
 
 # Test all with coverage for codecov
 [tasks.covgen]
 command = "cargo"
-args = ["llvm-cov", "nextest", "-j", "1", "--output-path", "./lcov.info", "--lcov"]
+args = ["llvm-cov", "nextest", "--no-default-features", "--features", "test", "-j", "1", "--output-path", "./lcov.info", "--lcov"]
 
 # Release
 [tasks.release]
