--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
   "crates/nanocl_stubs",
   "crates/nanocld_client",
-  "bin/proxy-ctrl",
+  "bin/ctrl-proxy",
+  "bin/ctrl-dns",
   "bin/nanocld",
   "bin/nanocl"
 ]
