--- a/Makefile.toml
+++ b/Makefile.toml
@@ -43,11 +43,11 @@ args = ["nextest", "run", "--no-default-features", "--features", "test", "-j", "
 
 [tasks.dev]
 command = "cargo"
-args = ["run", "--features", "dev", "--bin", "nanocld", "${@}"]
+args = ["run", "--no-default-features", "--features", "dev", "--bin", "nanocld", "${@}"]
 
 [tasks.dev-proxy]
 command = "cargo"
-args = ["run", "--features", "dev", "--bin", "proxy-ctrl", "${@}"]
+args = ["run", "--no-default-features", "--features", "dev", "--bin", "ctrl-proxy", "${@}"]
 
 # Test coverage
 [tasks.cov]
