--- a/bin/ctrl-dns/Cargo.toml
+++ b/bin/ctrl-dns/Cargo.toml
@@ -13,5 +13,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.1.4", features = ["derive"] }
 ntex = { version = "0.6.5", features = ["tokio"] }
-nanocld_client = "0.0.2"
+nanocld_client = "0.4.0"
 futures = "0.3.26"
+serde = { version = "1.0.158", features = ["derive"] }
+serde_json = "1.0.94"
