--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
         mv ubuntu-22.04-minimal-cloudimg-amd64.img /tmp
+        sudo apt-get update -y
         sudo apt-get install -y qemu-utils
         sudo chmod 777 /tmp
         sudo ./scripts/prepare_tests.sh
