--- a/bin/nanocld/specs/controllers/test.dns.yml
+++ b/bin/nanocld/specs/controllers/test.dns.yml
@@ -4,15 +4,8 @@ ApiVersion: v0.4
 Namespace: system
 
 Cargoes:
-- Name: proxy
+- Name: dns
   Container:
     Image: nanocl-dns:test
     HostConfig:
       NetworkMode: host
-      Binds: [
-        "/var/lib/nanocl/proxy/letsencrypt:/etc/letsencrypt",
-        "/var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d",
-        "/var/lib/nanocl/proxy/html:/usr/share/nginx/html",
-        "/var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled",
-        "/var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled",
-      ]
