--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,17 +49,18 @@ jobs:
         docker build -t nanocl-proxy:test -f ./bin/ctrl-proxy/nginx/Dockerfile ./bin/ctrl-proxy
         docker build -t nanocl-dns:test -f ./bin/ctrl-dns/dnsmasq/Dockerfile ./bin/ctrl-dns/dnsmasq
         docker pull nexthat/nanocl-get-started:latest
-        cargo build --bin nanocl
-        cargo build --bin ctrl-proxy
+        cargo build --features test --bin nanocl
+        cargo build --features test --bin ctrl-proxy
         cp ./target/debug/nanocl /usr/local/bin
-        cargo make run-daemon -- --init
+        cargo build --features test --bin nanocld
+        cargo run --features test --bin nanocld -- --init
         docker network ls
-        cargo make run-daemon &
+        cargo run --features test --bin nanocld &
         sleep 8
         sudo mkdir -p /var/lib/nanocl/proxy
         sudo chmod 777 -R /run/nanocl
         sudo chmod 777 -R /var/lib/nanocl
-        cargo run --bin ctrl-proxy -- --conf-dir /var/lib/nanocl/proxy &
+        cargo run --features test --bin ctrl-proxy -- --conf-dir /var/lib/nanocl/proxy &
         sleep 8
         sudo chmod 777 -R /run/nanocl
         mkdir -p /tmp/nginx/sites-enabled
