refactor: include ctrl-dns baseline (#184)
* refactor: include ctrl-dns baseline

* chore: upgrade deps ntex to 0.6.5

* start dns refactor

* feature: devcontainer

* refactor(nanocld): ssl connection for store

* chore(deps): manual update

* refactor: test workflow

* bugfix: test workflow

* bugfix: test workflow

* bugfix: test workflow

* bugfix: test workflow

* bugfix: test workflow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
   "crates/nanocl_stubs",
   "crates/nanocld_client",
-  "bin/proxy-ctrl",
+  "bin/ctrl-proxy",
+  "bin/ctrl-dns",
   "bin/nanocld",
   "bin/nanocl"
 ]
@@ -12,7 +13,6 @@ opt-level = 0
 
 [profile.release]
 opt-level = 'z'
-lto = true
 codegen-units = 1
 strip = "debuginfo"
 
