--- a/Makefile.toml
+++ b/Makefile.toml
@@ -34,30 +34,82 @@ args = ["nextest", "run", "-p", "nanocl"]
 # Test all
 [tasks.test]
 command = "cargo"
-args = ["nextest", "run", "--no-default-features", "--features", "test", "-j", "1"]
+args = [
+  "nextest",
+  "run",
+  "--no-default-features",
+  "--features",
+  "test",
+  "-j",
+  "1",
+]
 
 # Test all with debug output
 [tasks.test-debug]
 command = "cargo"
-args = ["nextest", "run", "--no-default-features", "--features", "test", "-j", "1", "--nocapture"]
+args = [
+  "nextest",
+  "run",
+  "--no-default-features",
+  "--features",
+  "test",
+  "-j",
+  "1",
+  "--nocapture",
+]
 
 [tasks.dev]
 command = "cargo"
-args = ["run", "--features", "dev", "--bin", "nanocld", "${@}"]
+args = [
+  "run",
+  "--no-default-features",
+  "--features",
+  "dev",
+  "--bin",
+  "nanocld",
+  "${@}",
+]
 
 [tasks.dev-proxy]
 command = "cargo"
-args = ["run", "--features", "dev", "--bin", "proxy-ctrl", "${@}"]
+args = [
+  "run",
+  "--no-default-features",
+  "--features",
+  "dev",
+  "--bin",
+  "ctrl-proxy",
+  "${@}",
+]
 
 # Test coverage
 [tasks.cov]
 command = "cargo"
-args = ["llvm-cov", "nextest", "--no-default-features", "--features", "test", "-j", "1"]
+args = [
+  "llvm-cov",
+  "nextest",
+  "--no-default-features",
+  "--features",
+  "test",
+  "-j",
+  "1",
+]
 
 # Test all with coverage for codecov
 [tasks.covgen]
 command = "cargo"
-args = ["llvm-cov", "nextest", "--no-default-features", "--features", "test", "-j", "1", "--output-path", "./lcov.info", "--lcov"]
+args = [
+  "llvm-cov",
+  "nextest",
+  "--no-default-features",
+  "--features",
+  "test",
+  "-j",
+  "1",
+  "--output-path",
+  "./lcov.info",
+  "--lcov",
+]
 
 # Release
 [tasks.release]
