--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
         mv ubuntu-22.04-minimal-cloudimg-amd64.img /tmp
+        sudo apt-get update -y
         sudo apt-get install -y qemu-utils
         sudo chmod 777 /tmp
         sudo ./scripts/prepare_tests.sh
@@ -45,20 +46,21 @@ jobs:
       run: |
         docker pull cockroachdb/cockroach:v22.2.6
         docker pull nexthat/metrsd:v0.1.0
+        docker build -t nanocl-proxy:test -f ./bin/ctrl-proxy/nginx/Dockerfile ./bin/ctrl-proxy
+        docker build -t nanocl-dns:test -f ./bin/ctrl-dns/dnsmasq/Dockerfile ./bin/ctrl-dns/dnsmasq
         docker pull nexthat/nanocl-get-started:latest
-        docker pull nexthat/nanocl-proxy:0.2.3
-        docker pull nexthat/nanocl-ctrl-proxy:0.2.3
-        cargo build --bin nanocl
-        cargo build --bin proxy-ctrl
+        cargo build --no-default-features --features test --bin nanocl
+        cargo build --no-default-features --features test --bin ctrl-proxy
         cp ./target/debug/nanocl /usr/local/bin
-        cargo make run-daemon -- --init
+        cargo build --no-default-features --features test --bin nanocld
+        cargo run --no-default-features --features test --bin nanocld -- --init
         docker network ls
-        cargo make run-daemon &
+        cargo run --no-default-features --features test --bin nanocld &
         sleep 8
         sudo mkdir -p /var/lib/nanocl/proxy
         sudo chmod 777 -R /run/nanocl
         sudo chmod 777 -R /var/lib/nanocl
-        cargo run --bin proxy-ctrl -- --conf-dir /var/lib/nanocl/proxy &
+        cargo run --no-default-features --features test --bin ctrl-proxy -- --conf-dir /var/lib/nanocl/proxy &
         sleep 8
         sudo chmod 777 -R /run/nanocl
         mkdir -p /tmp/nginx/sites-enabled
