--- a/bin/ctrl-proxy/Cargo.toml
+++ b/bin/ctrl-proxy/Cargo.toml
@@ -1,6 +1,6 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
-name = "proxy-ctrl"
+name = "ctrl-proxy"
 version = "0.2.3"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
@@ -11,7 +11,7 @@ homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
 repository = "https://github.com/nxthat/nanocld"
 
 [[bin]]
-name = "proxy-ctrl"
+name = "ctrl-proxy"
 test = true
 bench = false
 path = "src/main.rs"
@@ -32,8 +32,8 @@ serde_yaml = "0.9.19"
 
 [dependencies]
 clap = { version = "4.1.7", features = ["derive"] }
-ntex = { version = "0.6.0", features = ["tokio"] }
-nanocld_client = { version = "0.4.0" }
+ntex = { version = "0.6.5", features = ["tokio"] }
+nanocld_client = { version = "0.4.1" }
 serde_json = "1.0.91"
 futures = "0.3.25"
 log = "0.4.17"
