--- a/bin/nanocld/specs/controllers/dev.proxy.yml
+++ b/bin/nanocld/specs/controllers/dev.proxy.yml
@@ -4,29 +4,31 @@ ApiVersion: v0.4
 Namespace: system
 
 Cargoes:
-  - Name: proxy
-    Container:
-      Image: nanocl-nginx:dev
-      HostConfig:
-        NetworkMode: host
-        Binds: [
-          "/var/lib/nanocl/proxy/html:/usr/share/nginx/html",
-          "/var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d",
-          "/var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled",
-          "/var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled"
-        ]
+- Name: proxy
+  Container:
+    Image: nanocl-nginx:dev
+    Tty: true
+    HostConfig:
+      NetworkMode: host
+      Binds:
+      - {state_dir}/proxy/html:/usr/share/nginx/html
+      - {state_dir}/proxy/conf.d:/etc/nginx/conf.d
+      - {state_dir}/proxy/sites-enabled:/etc/nginx/sites-enabled
+      - {state_dir}/proxy/streams-enabled:/etc/nginx/streams-enabled
 
-  - Name: ctrl-proxy
-    Container:
-      Image: nanocl-ctrl-proxy:dev
-      Cmd: ["-x", "run"]
-      Tty: true
-      HostConfig:
-        Binds: [
-          "./:/project",
-          "/usr/local/cargo/registry/cache:/usr/local/cargo/registry/cache",
-          "/var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d",
-          "/var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled",
-          "/var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled",
-          "/run/nanocl:/run/nanocl"
-        ]
+- Name: ctrl-proxy
+  Container:
+    Image: nanocl-dev:dev
+    Cmd:
+    - watch
+    - -x
+    - run --no-default-features --features dev --bin ctrl-proxy
+    Tty: true
+    HostConfig:
+      Binds:
+      - ./:/project
+      - /usr/local/cargo/registry/cache:/usr/local/cargo/registry/cache
+      - {state_dir}/proxy/conf.d:/etc/nginx/conf.d
+      - {state_dir}/proxy/sites-enabled:/etc/nginx/sites-enabled
+      - {state_dir}/proxy/streams-enabled:/etc/nginx/streams-enabled
+      - /run/nanocl:/run/nanocl
