refactor(nanocld): boot system

--- a/bin/nanocld/specs/store.yml
+++ b/bin/nanocld/specs/store.yml
@@ -1,6 +1,10 @@
 Name: store
 Container:
   Image: cockroachdb/cockroach:v22.2.6
+  Tty: true
+  Cmd:
+  - start-single-node
+  - --insecure
   Binds:
   - {state_dir}/store/data:/cockroach/cockroach-data
   - {state_dir}/store/certs:/certs
