refactor(nanocld): EventEmitter async

--- a/bin/nanocld/specs/controllers/dev.dns.yml
+++ b/bin/nanocld/specs/controllers/dev.dns.yml
@@ -12,7 +12,7 @@ Cargoes:
 
 - Name: ctrl-dns
   Container:
-    Image: nanocl-dev:dev
+    Image: ghcr.io/nxthat/nanocl-dev:dev
     Cmd:
     - watch
     - -x
