--- a/bin/nanocld/specs/controllers/dev.proxy.yml
+++ b/bin/nanocld/specs/controllers/dev.proxy.yml
@@ -18,7 +18,7 @@ Cargoes:
 
 - Name: ctrl-proxy
   Container:
-    Image: nanocl-dev:dev
+    Image: ghcr.io/nxthat/nanocl-dev:dev
     Cmd:
     - watch
     - -x
