--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -22,4 +22,4 @@ uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
 chrono = "0.4.24"
-utoipa = { version = "3", optional = true }
+utoipa = { version = "3", features = ["uuid", "chrono"], optional = true }
