--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -14,10 +14,12 @@ bench = false
 
 [features]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
+utoipa = ["dep:utoipa"]
 
 [dependencies]
-bollard-next = { version = "0.14.3" }
+bollard-next = { version = "0.14.4" }
 uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
 chrono = "0.4.24"
+utoipa = { version = "3", features = ["uuid", "chrono"], optional = true }
