--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -17,13 +17,14 @@ default = ["tokio"]
 tokio = ["ntex/tokio"]
 glommio = ["ntex/glommio"]
 async-std = ["ntex/async-std"]
+utoipa = ["nanocl_stubs/utoipa"]
 
 [dev-dependencies]
 tokio-util = "0.7.7"
 tokio = { version = "1.25.0", features = ["fs"] }
 
 [dependencies]
-bollard-next = { version = "0.14.3" }
+bollard-next = { version = "0.14.4" }
 futures = "0.3.25"
 nanocl_stubs = { version = "0.4.2", features = ["serde"] }
 ntex = { version = "0.6.5" }
