--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -17,7 +17,12 @@ path = "src/main.rs"
 
 [features]
 default = ["release"]
-dev = ["dep:utoipa", "dep:ntex-files", "bollard-next/utoipa", "nanocl_stubs/utoipa"]
+dev = [
+  "dep:utoipa",
+  "dep:ntex-files",
+  "bollard-next/utoipa",
+  "nanocl_stubs/utoipa",
+]
 test = []
 release = []
 
@@ -45,7 +50,13 @@ serde = { version = "1.0.148", features = ["derive"] }
 uuid = { version = "1.2", features = ["serde", "v4"] }
 ntex = { version = "0.6.5", features = ["openssl", "tokio"] }
 diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
-diesel = { version = "2.0.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
+diesel = { version = "2.0.1", features = [
+  "postgres",
+  "r2d2",
+  "chrono",
+  "uuid",
+  "serde_json",
+] }
 tokio = { version = "1.23.1", features = ["fs", "process", "io-std"] }
 hyper = "0.14.24"
 tokio-util = "0.7.7"
