bugfix(ctrl-proxy): Public network

--- a/bin/nanocld/specs/controllers/dev.dns.yml
+++ b/bin/nanocld/specs/controllers/dev.dns.yml
@@ -19,6 +19,7 @@ Cargoes:
     - run --no-default-features --features dev --bin ctrl-dns
     Tty: true
     HostConfig:
+      NetworkMode: system
       Binds:
       - ./:/project
       - /run/nanocl:/run/nanocl
