--- a/bin/nanocld/specs/controllers/proxy.yml
+++ b/bin/nanocld/specs/controllers/proxy.yml
@@ -9,21 +9,20 @@ Cargoes:
     Image: nexthat/nanocl-proxy:0.2.3
     HostConfig:
       NetworkMode: host
-      Binds: [
-        "/var/lib/nanocl/proxy/letsencrypt:/etc/letsencrypt",
-        "/var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d",
-        "/var/lib/nanocl/proxy/html:/usr/share/nginx/html",
-        "/var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled",
-        "/var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled",
-      ]
+      Binds:
+      - /var/lib/nanocl/proxy/letsencrypt:/etc/letsencrypt
+      - /var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d
+      - /var/lib/nanocl/proxy/html:/usr/share/nginx/html
+      - /var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled
+      - /var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled
 
 - Name: ctrl-proxy
   Container:
     Image: nexthat/nanocl-ctrl-proxy:0.2.3
     HostConfig:
-      Binds: [
-        "/var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d",
-        "/var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled",
-        "/var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled",
-        "/run/nanocl:/run/nanocl"
-      ]
+      NetworkMode: system
+      Binds:
+      - /var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d
+      - /var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled
+      - /var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled
+      - /run/nanocl:/run/nanocl
