--- a/bin/nanocld/specs/controllers/test.proxy.yml
+++ b/bin/nanocld/specs/controllers/test.proxy.yml
@@ -9,10 +9,9 @@ Cargoes:
     Image: nanocl-proxy:dev
     HostConfig:
       NetworkMode: host
-      Binds: [
-        "/var/lib/nanocl/proxy/letsencrypt:/etc/letsencrypt",
-        "/var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d",
-        "/var/lib/nanocl/proxy/html:/usr/share/nginx/html",
-        "/var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled",
-        "/var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled",
-      ]
+      Binds:
+      - /var/lib/nanocl/proxy/letsencrypt:/etc/letsencrypt
+      - /var/lib/nanocl/proxy/conf.d:/etc/nginx/conf.d
+      - /var/lib/nanocl/proxy/html:/usr/share/nginx/html
+      - /var/lib/nanocl/proxy/sites-enabled:/etc/nginx/sites-enabled
+      - /var/lib/nanocl/proxy/streams-enabled:/etc/nginx/streams-enabled
