--- a/bin/nanocld/specs/metrics.yml
+++ b/bin/nanocld/specs/metrics.yml
@@ -5,5 +5,6 @@ Container:
   - --hosts
   - unix:///run/nanocl/metrics.sock
   HostConfig:
+    NetworkMode: system
     Binds:
     - /run/nanocl:/run/nanocl
