--- a/bin/ctrl-proxy/Dockerfile
+++ b/bin/ctrl-proxy/Dockerfile
@@ -8,6 +8,7 @@ COPY ./crates/nanocl_stubs/Cargo.toml ./crates/nanocl_stubs/Cargo.toml
 COPY ./crates/nanocld_client/Cargo.toml ./crates/nanocld_client/Cargo.toml
 COPY ./bin/nanocl/Cargo.toml ./bin/nanocl/Cargo.toml
 COPY ./bin/nanocld/Cargo.toml ./bin/nanocld/Cargo.toml
+COPY ./bin/ctrl-dns/Cargo.toml ./bin/ctrl-dns/Cargo.toml
 COPY ./bin/ctrl-proxy/Cargo.toml ./bin/ctrl-proxy/Cargo.toml
 
 # stage 2 - Build our project
@@ -18,24 +19,26 @@ ARG channel=stable
 ## Build our nanocl daemon binary
 COPY --from=planner /app /app
 WORKDIR /app
-RUN apk add musl-dev libpq-dev openssl git upx
+RUN apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base
 COPY ./bin/nanocld/migrations ./bin/nanocld/migrations
 COPY ./bin/nanocld/src ./bin/nanocld/src
 COPY ./bin/nanocld/build.rs ./bin/nanocld/build.rs
-COPY ./crates/nanocl_stubs/src ./crates/nanocl_stubs/src
-COPY ./crates/nanocld_client/src ./crates/nanocld_client/src
 COPY ./bin/nanocl/src ./bin/nanocl/src
 COPY ./bin/nanocl/build.rs ./bin/nanocl/build.rs
+COPY ./bin/ctrl-dns/src ./bin/ctrl-dns/src
+COPY ./crates/nanocl_stubs/src ./crates/nanocl_stubs/src
+COPY ./crates/nanocld_client/src ./crates/nanocld_client/src
 COPY .git ./.git
 COPY ./bin/ctrl-proxy/src ./bin/ctrl-proxy/src
-COPY ./bin/ctrl-proxy/build.rs ./bin/ctrl-proxy/build.rs
-COPY ./bin/ctrl-proxy/specs ./bin/ctrl-proxy/specs
 ENV RUSTFLAGS="-C target-feature=+crt-static"
 RUN cargo build --release --target=x86_64-unknown-linux-musl --bin ctrl-proxy
 RUN upx --lzma --best /app/target/x86_64-unknown-linux-musl/release/ctrl-proxy
 
 # stage 4 - create runtime image
 FROM scratch
+
+LABEL org.opencontainers.image.source https://github.com/nxthat/nanocl
+LABEL org.opencontainers.image.description Nanocl Controller Proxy
 
 COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/ctrl-proxy /bin/ctrl-proxy
 
