--- a/bin/nanocld/specs/controllers/proxy.yml
+++ b/bin/nanocld/specs/controllers/proxy.yml
@@ -6,7 +6,7 @@ Namespace: system
 Cargoes:
 - Name: proxy
   Container:
-    Image: nexthat/nanocl-proxy:0.2.3
+    Image: ghcr.io/nxthat/nanocl-proxy:0.2.4
     HostConfig:
       NetworkMode: host
       Binds:
@@ -18,7 +18,7 @@ Cargoes:
 
 - Name: ctrl-proxy
   Container:
-    Image: nexthat/nanocl-ctrl-proxy:0.2.3
+    Image: ghcr.io/nxthat/nanocl-ctrl-proxy:0.2.4
     HostConfig:
       NetworkMode: system
       Binds:
