--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -26,7 +26,10 @@ clap_mangen = { version = "0.2" }
 tabled = "0.10.0"
 nanocld_client = { version = "0.4.1" }
 bollard-next = { version = "0.14.7" }
-chrono = "0.4.24"
+chrono = { version = "0.4.24", default-features = false, features = [
+  "std",
+  "clock",
+] }
 
 [dependencies]
 nanocld_client = { version = "0.4.1", features = ["tokio"] }
@@ -45,7 +48,10 @@ hyper = "0.14.20"
 serde_urlencoded = "0.7.1"
 users = "0.11.0"
 tokio-util = "0.7.7"
-chrono = "0.4.24"
+chrono = { version = "0.4.24", default-features = false, features = [
+  "std",
+  "clock",
+] }
 libc = "0.2.139"
 mustache = "0.9.0"
 dialoguer = "0.10.3"
