--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -21,5 +21,8 @@ bollard-next = { version = "0.14.7" }
 uuid = { version = "1.2.2" }
 serde = { version = "1.0.152", features = ["derive"], optional = true }
 serde_json = "1.0.91"
-chrono = "0.4.24"
+chrono = { version = "0.4.24", default-features = false, features = [
+  "std",
+  "clock",
+] }
 utoipa = { version = "3", features = ["uuid", "chrono"], optional = true }
