--- a/.github/workflows/stable_nanocl.yml
+++ b/.github/workflows/stable_nanocl.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   release_image:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-8-cores
 
     steps:
     - uses: actions/checkout@v3
